--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>coge-core</module>
         <module>coge-spring-mvc</module>
+        <module>coge-web</module>
     </modules>
     <packaging>pom</packaging>
 
