add maven tes module, demo !!!resource plugin!!!

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>coge-core</module>
         <module>coge-spring-mvc</module>
         <module>coge-web</module>
+        <module>coge-maven</module>
     </modules>
     <packaging>pom</packaging>
 
